Animations fix (y-scrolling on mobile), footer adaptation

--- a/css/style.css
+++ b/css/style.css
@@ -320,6 +320,7 @@ h6 {
   font-size: 20px;
   color: #40403f;
   transition: 0.2s ease-in-out;
+  border-radius: 0px;
 }
 .input-phone {
   width: 100%;
@@ -334,6 +335,12 @@ h6 {
 @media (max-width: 660px) {
   .section-title {
     font-size: 25px;
+  }
+}
+@media (max-width: 430px) {
+  .input {
+    font-size: 16px;
+    height: 40px;
   }
 }
 .header {
@@ -1143,6 +1150,17 @@ h6 {
   .form__img {
     width: 250px;
     display: none;
+  }
+}
+@media (max-width: 430px) {
+  .form__form {
+    padding: 30px;
+  }
+  .form__btn {
+    padding: 15px 50px;
+  }
+  .input__item_title {
+    font-size: 16px;
   }
 }
 .footer {
