--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -59,6 +59,7 @@
 	font-size: 20px 
 	color: $grey 
 	transition: 0.2s ease-in-out 
+	border-radius: 0px
 	&-phone
 		width: 100%
 		height: 50px
@@ -73,3 +74,9 @@
 	.section
 		&-title
 			font-size: 25px
+
+
+@media (max-width: 430px)
+	.input
+		font-size: 16px
+		height: 40px
